@@ -7,6 +7,8 @@ trunk
 * added R documentation for omxApply(), omxSapply(), and omxLapply()
 * wrote mxRename() and added R documentation for function
 * renamed all objective function generic functions from omxObj* to genericObj*
+* added 'submodels' argument to summary() to ignore independent submodels (see ?summary)
+* added 'independentTime' to summary() output. Wall clock time for independent submodels.
 
 Release 0.2.5-1050
 ==================
